# testbed

./: .gitignore  README.md  justfile
data/: setup.sql
data_generator/: generate_data.py  pyproject.toml
orchestrator/: pyproject.toml
orchestrator/dagster_project/: __init__.py  assets.py
orchestrator/dbt_project/: dbt_project.yml  profiles.yml  pyproject.toml
orchestrator/dbt_project/models/metrics/: schema.yml  store_metrics.sql
orchestrator/dbt_project/models/staging/: schema.yml  stg_customers.sql  stg_products.sql  stg_sales.sql  stg_stores.sql
orchestrator/orchestrator_project/: __init__.py  assets.py
orchestrator/transforms/: dbt_project.yml  profiles.yml
orchestrator/transforms/models/metrics/: customer_metrics.sql  product_metrics.sql
orchestrator/transforms/models/staging/: schema.yml  stg_products.sql  stg_sales.sql  stg_stores.sql
src_db/: setup.sql
