[project]
name = "orchestrator"
version = "0.1.0"
description = "Dagster orchestration with dbt for testbed project"
requires-python = "==3.13.*"
dependencies = [
    "dagster==1.9.0",
    "dagster-webserver==1.9.0",
    "dagster-dbt==0.25.0",
    "dbt_project",
]

[tool.uv.sources]
dbt_project = { path = "dbt_project", editable = true }

[tool.dagster]
module_name = "dagster_project"
