[project]
name = "dbt_project"
version = "0.1.0"
description = "dbt transformations for testbed project"
requires-python = "==3.13.*"
dependencies = [
    "dbt-core==1.9.0",
    "dbt-duckdb==1.9.0",
    "duckdb==1.4.0",
]

[tool.uv]
python-preference = "only-managed"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
exclude = ["models*", "macros*", "analyses*", "seeds*", "snapshots*", "tests*", "target*", "dbt_packages*", "logs*"]
